# RtmpDemo

app/: build.gradle
app/src/androidTest/java/com/ice/rtmpdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/ice/rtmpdemo/: MainActivity.java
app/src/test/java/com/ice/rtmpdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
